[package]
name = "btsniffer"
version = "0.1.0"
authors = ["cppcoffee <cppcoffee@gmail.com>"]
edition = "2018"
description = "A sniffer of DHT"


[dependencies]
env_logger = "0.7"
log = "0.4"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.7"
sha1 = "0.6"
async-std = { version = "1.6", features = ["unstable"] }
lru-cache = "0.1"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bencode = { path = "bencode" }
